--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
 version: '3.8'
-
 services:
-  x-ui:
-    image: enwaiax/x-ui:latest
-    container_name: x-ui
-    restart: always
+  xray:
+    build: .
+    container_name: xray-vless
     ports:
-      - "12122:54321"   # external port : internal x-ui web panel port
-    volumes:
-      - ./xui-data:/etc/x-ui
-    environment:
-      - TZ=Asia/Colombo
+      - "8080:8080"
+      - "8443:8443"
+    restart: unless-stopped
